[package]
name = "interpol"
version = "0.1.0"
authors = ["Sam <tritoke@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "~0.16.8"
rayon = "~1.5.0"
rgb = "~0.8.25"
structopt = "~0.3.21"
anyhow = "~1.0.39"
